syntax = "proto3";

package greet.v1;

option go_package = "example.com/connect-example/greet/v1;greetv1";

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  rpc StreamGreetings(GreetRequest) returns (stream GreetResponse) {}
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string greeting = 1;
}
